# os_ex3

./: Barrier.cpp  CMakeLists.txt  Makefile  MapReduceClient.h  MapReduceFramework.cpp  README  SampleClient.cpp  Sol  Sol2  ex3.tar  test_2.cpp
text_gen/: gen  gen.cpp  genText  text_1  text_2  text_3  text_4  text_5  text_6
